get rid of settings page implement transfer on cli and api
Nostr-Signature: a312986953d2b408aae10a51ec29b51aca8a2e6396e5b5ec7fd969bb12c5b882 573634b648634cbad10f2451776089ea21090d9407f715e83c577b4611ae6edc 09b7bff4ce945ac120a413246a0a6111bf9afc14e570524f1e2e4f8ee8e22a2a2c71fd00fedb836e030245d3cbc1e42fcb8c5bde7c643fde2551582f63942851
